Added documentation for cis and replaced the word method with sub in a few places

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -408,7 +408,7 @@ Usage:
     acotan NUMERIC
     NUMERIC.acotan
 
-Coerces the invocant (or in method form, its argument) to L<Numeric|/type/Numeric>, and returns its
+Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
 L<arc-cotangens|https://en.wikipedia.org/wiki/Inverse_trigonometric_functions> in
 radians.
 
@@ -439,7 +439,7 @@ Usage:
     asinh NUMERIC
     NUMERIC.asinh
 
-Coerces the invocant (or in method form, its argument) to L<Numeric|/type/Numeric>, and returns its
+Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
 L<Inverse Sine hyperbolicus|https://en.wikipedia.org/wiki/Inverse_hyperbolic_function>.
 
 =head2 routine cosh
@@ -454,7 +454,7 @@ Usage:
     cosh NUMERIC
     NUMERIC.cosh
 
-Coerces the invocant (or in method form, its argument) to L<Numeric|/type/Numeric>, and returns its
+Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
 L<Cosine hyperbolicus|https://en.wikipedia.org/wiki/Hyperbolic_function>.
 
 =head2 routine acosh
@@ -469,7 +469,7 @@ Usage:
     acosh NUMERIC
     NUMERIC.acosh
 
-Coerces the invocant (or in method form, its argument) to L<Numeric|/type/Numeric>, and returns its
+Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
 L<Inverse Cosine hyperbolicus|https://en.wikipedia.org/wiki/Inverse_hyperbolic_function>.
 
 =head2 routine tanh
@@ -484,7 +484,7 @@ Usage:
     tanh NUMERIC
     NUMERIC.tanh
 
-Coerces the invocant (or in method form, its argument) to L<Numeric|/type/Numeric>, and returns its
+Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
 L<Tangens hyperbolicus|https://en.wikipedia.org/wiki/Hyperbolic_function>.
 
 =head2 routine atanh
@@ -499,7 +499,7 @@ Usage:
     atanh NUMERIC
     NUMERIC.atanh
 
-Coerces the invocant (or in method form, its argument) to L<Numeric|/type/Numeric>, and returns its
+Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
 L<Inverse tangens hyperbolicus|https://en.wikipedia.org/wiki/Inverse_hyperbolic_function>.
 
 =head2 routine sech
@@ -603,6 +603,23 @@ Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>,
 L<Inverse hyperbolic cotangent|https://en.wikipedia.org/wiki/Inverse_hyperbolic_function>.
 
     say acotanh(2.5);                  # 0.423648930193602
+
+=head2 routine cis
+
+Defined as:
+
+    sub cis(Numeric(Cool))
+    method cis()
+
+Usage:
+
+    cis NUMERIC
+    NUMERIC.cis
+
+Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns 
+L<cos(argument) + i*sin(argument)|https://en.wikipedia.org/wiki/Cis_%28mathematics%29>. 
+
+    say cis(pi/4);                  # 0.707106781186548+0.707106781186547i 
 
 =head2 routine log
 
@@ -1419,7 +1436,7 @@ produced by the final statement in the file.
 
 =begin comment
 
-TODO: sech, asech, cosech, acosech, cotanh, acotanh, cis,
+TODO: 
 unpolar, fmt, substr-rw, trans,
 match, subst, sprintf, printf, samecase
 
