--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -529,7 +529,7 @@ say 1 § 2 § 3;      # (1|2|3)
 
 =head1 Traits
 
-I<Traits> are subroutines are run at compile time to modify the behavior of a
+I<Traits> are subroutines that are run at compile time to modify the behavior of a
 type, variable, routine, attribute, or other language object.
 
 Examples of traits are:
