Added tanh, atanh, cotanh and acosech to the coercion table and removed capitalize from the same

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -41,13 +41,16 @@ what type they coerce to:
     cos             Numeric
     acos            Numeric
     tan             Numeric
+    tanh            Numeric
     atan            Numeric
     atan2           Numeric
+    atanh           Numeric
     sec             Numeric
     asec            Numeric
     cosec           Numeric
     acosec          Numeric
     cotan           Numeric
+    cotanh          Numeric
     acotan          Numeric
     sinh            Numeric
     asinh           Numeric
@@ -55,8 +58,8 @@ what type they coerce to:
     acosh           Numeric
     sech            Numeric
     asech           Numeric
-    asech           Numeric
     cosech          Numeric
+    acosech         Numeric
     acotanh         Numeric
     cis             Numeric
     log             Numeric
@@ -83,7 +86,6 @@ what type they coerce to:
     unimatch        Str
     uc              Str
     lc              Str
-    capitalize      Str
     fc              Str
     flip            Str
     trans           Str
