Added chomp, chop and codes to the method coercion table

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -103,6 +103,9 @@ what type they coerce to:
     trim-leading    Str
     trim-trailing   Str
     EVAL            Str
+    chomp           Str
+    chop            Str
+    codes           Str    
 
 =end table
 
