Removed two typos and changed an inconsistency in the usage section for sort

--- a/Type/List.pod
+++ b/Type/List.pod
@@ -488,7 +488,6 @@ from the invocant list are returned in a random sequence.
 Examples:
 
     say <a b c d e>.pick;           # b
-    b
     say <a b c d e>.pick: 3;        # (c a e)
     say  <a b c d e>.pick: *;       # (e d a b c)
 
@@ -514,7 +513,6 @@ chosen elements from the original list.
 Examples:
 
     say <a b c d e>.roll;       # b
-    b
     say <a b c d e>.roll: 3;    # c c e
     say roll 8, <a b c d e>;    # b a e d a e b c
 
@@ -588,7 +586,7 @@ Defined as:
 Usage:
 
     sort LIST
-    sort LIST, SORT_BY
+    sort SORT_BY, LIST
     LIST.sort
     LIST.sort(SORT_BY)
 
