Fix typos and Improve documentation

--- a/Language/rb-nutshell.pod
+++ b/Language/rb-nutshell.pod
@@ -913,7 +913,7 @@ command-line parsing.
 
 =head2 Automated Translation
 
-There are currently no automated transation tools from Ruby to Perl 6.
+There are currently no automated translation tools from Ruby to Perl 6.
 
 =end pod
 
@@ -930,16 +930,15 @@ not appear in the TOC.
 
 This article does not describe the additions to syntax, nor details of
 possible improvements. For example, C<0 + $string> still works, even though
-we would write it as C<+$string> now. (Blue Tiger will offer a Perl
+we would write it as C<+$string> now. Blue Tiger will offer a Perl
 Modernization guide, with step-by-step procedures for translation, along
-with details of new idioms and "better ways to do it")
+with details of new idioms and "better ways to do it".
 
 Example code and links to other documents should be favored over long
 explanations of details better found elsewhere.
 
-Finally, if a real user asks a Ruby->P6 question not answered here, please
-add it to the document, even if we don't have a good answer yet. That will
+Finally, if a real user asks a Ruby to Perl 6 question that is not being answered here, please
+add it to the document. Even if we do not have a good answer yet, that will
 be better than losing the information about a real need.
 
 =end comments
-
