add note about Test being a core module; add example of a user-entered tolerance for numeric testing

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -26,7 +26,7 @@ project's base directory.
 A typical test file looks something like this:
 
     use v6;
-    use Test;
+    use Test; # a core module
     use lib 'lib';
 
     plan $num-tests;
@@ -141,6 +141,12 @@ C<$description> of the test.
     my $eulers-constant-approx = 2.71828;
     is-approx $eulers-constant-approx, e, "approximate Euler's constant";
 
+The use can also input a desired tolerance, e.g., testing $some-number:
+
+    my $spec-num = 1.2345;
+    my $spec-tol = 0.1;
+    is-approx $some-number, $spec-num, $tol, "special tolerance check";
+ 
 =head2 By structural comparison
 
 =item X<is-deeply($value, $expected, $description?)|is-deeply>
