Revert "Add missing :"
This reverts commit e6c92f416c52ca4c1a456e5cc4b1efca09ebd0af.

As discussed in the issue #427, this wasn't correct.

--- a/Type/IO.pod
+++ b/Type/IO.pod
@@ -317,7 +317,7 @@ C<False>.
     spurt "path/to/file", "default text, directly written";
 
     # write directly with a non-Unicode encoding
-    spurt "path/to/latin1_file", "latin1 text: äöüß", :enc => "latin1";
+    spurt "path/to/latin1_file", "latin1 text: äöüß", enc => "latin1";
 
     # append to a pre-existing file
     spurt "file_already_exists", "some text";
