correct module terminology; correct 'is-approx' second arg name

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -26,7 +26,7 @@ project's base directory.
 A typical test file looks something like this:
 
     use v6;
-    use Test; # a core module
+    use Test;      # a Standard module included with Rakudo
     use lib 'lib';
 
     plan $num-tests;
@@ -145,7 +145,7 @@ The use can also input a desired tolerance, e.g., testing $some-number:
 
     my $spec-num = 1.2345;
     my $spec-tol = 0.1;
-    is-approx $some-number, $spec-num, $tol, "special tolerance check";
+    is-approx $some-number, $spec-num, $spec-tol, "special tolerance check";
  
 =head2 By structural comparison
 
