Mention/index return-rw
Closes #453

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -680,6 +680,10 @@ All these forms may produce a return value the same way C<loop> does.
 
 =comment TODO
 
+=head1 X<return-rw|control flow>
+
+Same as C<return>, but returns a writable container.
+
 =head1 X<once|control flow>
 
 A block prefix with C<once> will be executed exactly once, even if placed inside a
