Added documentation for the key method

--- a/Type/Pair.pod
+++ b/Type/Pair.pod
@@ -44,6 +44,18 @@ Returns a new C<Pair> object with key and value exchanged.
     say $p.key;         # Perl
     say $p.value;       # 6
 
+=head2 method key
+
+Defined as:
+
+    multi method key(Pair:D:)
+
+Usage:
+
+    PAIR.key
+
+Returns the I<key> part of the C<Pair>.
+
 =head2 method value
 
 Defined as:
