Clarify ∅ => set() is empty set

--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -105,7 +105,7 @@ have a special meaning in Perl 6.
 
   ⁹        U+2079      **9                 can be combined with ⁰..⁹
 
-  ∅        U+2205      set()
+  ∅        U+2205      set() I<(empty set)>
 
   ∈        U+2208      (elem)
 
