Fixed duplicate line and added examples to is-prime, expmod and unival

--- a/Type/Int.pod
+++ b/Type/Int.pod
@@ -34,7 +34,7 @@ Usage:
     INTEGER.chr
 
 Returns a one-character string, by interpreting the integer as a Unicode
-codepoint number and converting it the corresponding character.
+codepoint number and converting it to the corresponding character.
 
 Example:
 
@@ -55,6 +55,9 @@ Usage:
 
 Returns the given C<Int> raised to the C<$y> power within modulus C<$mod>.
 
+    say expmod(4, 2, 5);    # 1
+    say 7.expmod(2, 5);     # 4
+
 =head2 routine is-prime
 
 Defined as:
@@ -66,12 +69,15 @@ Usage:
 
     is-prime INTEGER
     INTEGER.is-prime
-    INTEGER.is-prime
+
 
 Returns C<True> if this C<Int> is known to be a prime, or is likely to be a
 prime based on a probabilistic Miller-Rabin test.
 
 Returns C<False> if this C<Int> is known not to be a prime.
+
+    say 2.is-prime;         # True
+    say is-prime(9);        # False
 
 =head2 routine lsb
 
@@ -131,6 +137,10 @@ Usage:
 
 Returns the number represented by the Unicode codepoint with the given integer
 number, or L<NaN> if it does not represent a number.
+
+    say ord("¾").unival;    # 0.75
+    say 190.unival;         # 0.75
+    say unival(65);         # NaN
 
 =head1 Operators
 
