try to improve second form of the is-approx test; correct spelling

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -141,11 +141,15 @@ C<$description> of the test.
     my $eulers-constant-approx = 2.71828;
     is-approx $eulers-constant-approx, e, "approximate Euler's constant";
 
-The use can also input a desired tolerance, e.g., testing $some-number:
+=item X<is-approx($value, $expected, $tol, $description?)|is-approx>
 
-    my $spec-num = 1.2345;
-    my $spec-tol = 0.1;
-    is-approx $some-number, $spec-num, $spec-tol, "special tolerance check";
+Marks a test as passed if the C<$value> and C<$expected> numerical values
+are within C<$tol> of each other.  The function accepts an optional
+C<$description> of the test.  For example, test for an approximation of pi:
+
+    my $pi-approx = 3.1416;
+    my $pi-tol = 0.0001;
+    is-approx $pi-approx, pi, $pi-tol, "approximate ";
  
 =head2 By structural comparison
 
