--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -149,7 +149,7 @@ C<$description> of the test.  For example, test for an approximation of pi:
 
     my $pi-approx = 3.1416;
     my $pi-tol = 0.0001;
-    is-approx $pi-approx, pi, $pi-tol, "approximate ";
+    is-approx $pi-approx, pi, $pi-tol, "approximate Pi";
  
 =head2 By structural comparison
 
