--- a/Type/Array.pod
+++ b/Type/Array.pod
@@ -99,6 +99,14 @@ The difference to method C<push> is that with an array or list argument,
 C<append> appends several elements (one for each array or list element),
 whereas C<push> appends just one element.
 
+Example:
+
+    my @a = <a b c>;
+    my @b = <d e f>;
+    @a.append: @b;
+    say @a.elems;               # 6
+    say @a;                     # a b c d e f
+
 =head2 routine shift
 
 Defined as:
@@ -140,7 +148,7 @@ Example:
 
     my @foo = <a b c>;
     @foo.unshift: 1, 3 ... 11;
-    say @foo;                   # 1 3 5 7 9 11 a b c
+    say @foo;                   # (1 3 5 7 9 11) a b c
 
 The notes in L<the documentation for method push|#method push> apply,
 regarding how many elements are added to the array.
@@ -163,6 +171,12 @@ Usage:
 
 Adds the elements from C<LIST> to the front of the array, modifying it
 in-place.
+
+Example:
+
+    my @foo = <a b c>;
+    @foo.prepend: 1, 3 ... 11;
+    say @foo;                   # 1 3 5 7 9 11 a b c
 
 =head2 routine splice
 
