Revert "put ascii commas in correct place for lists > 2 elements"
This reverts commit e7fab01b8a88472f27d9c5e91e25e9cc598ba28b.

Not only it introduces extra commas which makes it harder to read, but it also
breaks one of the examples.

This is what it was supposed to be:
$ perl6 -e 'say ‚hello world’' # prints 'hello world'

And this is what this commit did:
$ perl6 -e 'say ’hello world,' # syntax error

--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -51,10 +51,10 @@ have a special meaning in Perl 6.
   e             |  U+1D452  | e     |       | 2.71828_18284_59045_235e0
   ∞             |  U+221E   | Inf   |       |
   …        |  U+2026   | ...   |       |
-  ‘     |  U+2018   | '     |       |               as part of ‘’, or ’, or ’‘
+  ‘     |  U+2018   | '     |       |               as part of ‘’ or ‚’ or ’‘
   ’     |  U+2019   | '     |       |               as part of ’‘ or ’’
   ‚     |  U+201A   | '     |       |               as part of ‚‘ or ‚’
-  “     |  U+201C   | "     |       |               as part of “”, or „”, or ”“
+  “     |  U+201C   | "     |       |               as part of “” or „” or ”“
   ”     |  U+201D   | "     |       |               as part of ”“ or ””
   „     |  U+201E   | "     |       |               as part of „“ or „”
   ｢           |  U+FF62   | Q//   |       |            as part of ｢｣
