--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -406,7 +406,7 @@ only one test will be marked TODO.
     sub my-custom-pi { 3 };
 
     todo 'not yet precise enough';         # Mark the test as TODO.
-    is my-custom-pi(), pi, 'my-custom-pi'; # Tun the test, but don't report
+    is my-custom-pi(), pi, 'my-custom-pi'; # Run the test, but don't report
                                            # failure in test harness.
 
 =item X<skip($reason, $count = 1)|skip>
