Added documentation for unpolar

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -686,6 +686,23 @@ Number) is used.
     say 1.exp;      # 2.71828182845905
     say 10.exp;     # 22026.4657948067
 
+=head2 method unpolar
+
+Defined as:
+
+    method unpolar(Numeric(Cool))
+
+Usage:
+
+    unpolar NUMERIC, NUMERIC
+    NUMERIC.unpolar(NUMERIC)
+
+Coerces the arguments (including the invocant in the method form) to L<Numeric|/type/Numeric>, and returns 
+a complex number from the given polar coordinates. The invocant (or the first argument in sub form) is the magnitude while
+the argument (i.e. the second argument in sub form) is the angle. The angle is assumed to be in radians.
+
+    say sqrt(2).unpolar(pi/4);      # 1+1i
+
 =head2 routine round
 
 Defined as:
