--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -48,7 +48,7 @@ have a special meaning in Perl 6.
   ≅             |  U+2245   | =~=   |       | 
   π             |  U+03C0   | pi    |       | 3.14159_26535_89793_238e0
   τ             |  U+03C4   | tau   |       | 6.28318_53071_79586_476e0
-  𝑒             |  U+1D452  | e     |       | 2.71828_18284_59045_235e0
+  \x{DD05}\x{DCA0}            |  U+1D452  | e     |       | 2.71828_18284_59045_235e0
   ∞             |  U+221E   | Inf   |       |
   …        |  U+2026   | ...   |       |
   ‘     |  U+2018   | '     |       |               as part of ‘’ or ‚’ or ’‘
@@ -74,9 +74,9 @@ have a special meaning in Perl 6.
   ⁹        |  U+2079   | **9    |       |              can be combined with ⁰..⁹
   ∅     |  U+205    | set()  |       | I<(empty set)>
   ∈     |  U+208    | (elem) |       |
-  ∉     |  U+209    | !(elem) |      |
+  ∉     |  U+209    |  !(elem)  |      |
   ∋     |  U+20B    | (cont) |      |
-  ∌     |  U+20C    | !(cont) |     |
+  ∌     |  U+20C    |  !(cont)  |     |
   ⊆     |  U+286    | (<=) |        |
   ⊈     |  U+288    | !(<=) |        |
   ⊂     |  U+282    | (<) |        |
