use correct command to begin a table

--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -36,7 +36,7 @@ such as ½ and ⅓.  (These aren't decimal digit characters, so can't be combine
 This list contains the codepoints (and their Texas (ASCII) equivalents) that
 have a special meaning in Perl 6.
 
-=begin table
+=table
   Symbol        | Codepoint | Texas   | Since | Remarks
   ==============|===========|=========|=======|=========================
   «             |  U+00AB   | <<    |       | as part of «» or .«
