Added documentation for polymod

--- a/Type/Int.pod
+++ b/Type/Int.pod
@@ -58,6 +58,26 @@ Returns the given C<Int> raised to the C<$y> power within modulus C<$mod>.
     say expmod(4, 2, 5);    # 1
     say 7.expmod(2, 5);     # 4
 
+=head2 routine polymod
+
+Defined as:
+
+    method polymod(Int:D: +@mods)      
+
+Usage:
+
+    INTEGER.polymod(LIST)            
+
+Returns a sequence of mod results corresponding to the divisors in C<@mods>.       
+If the number of divisors is finite, returns one more result than the number 
+of divisors, and the final result is the remainder after all the divisions. 
+If the number of divisors is infinite, runs until the remainder is 0. 
+The Int version of this method assumes all the divisors are also integers. 
+Coerce the invocant to Num or Rat if you wish to use fractional operations.
+  
+    say 3600.polymod(60,60,24);     # (0 0 1 0)    
+    say 3661.polymod(60,60,24);     # (1 1 1 0)
+
 =head2 routine is-prime
 
 Defined as:
