Added documentation for the weekday-of-month method

--- a/Type/Dateish.pod
+++ b/Type/Dateish.pod
@@ -148,4 +148,19 @@ at the start or end of a year, the week may actually belong to the other year.
     say $week;      # 1
     say Date.new('2015-01-31').week;        # 2015 5
 
+=head2 method weekday-of-month
+
+Defined as:
+
+    method weekday-of-month(Date:D:) returns Int:D
+
+Usage:
+
+    Dateish.weekday-of-month
+
+Returns a number 1..5 indicating the number of times a particular day-of-week 
+has occurred so far during that month, the day itself included. 
+
+    say Date.new("2003-06-09").weekday-of-month;  # 2  (second Monday of the month)
+
 =end pod
