--- a/Type/Dateish.pod
+++ b/Type/Dateish.pod
@@ -79,6 +79,9 @@ Usage:
 Returns C<True> if C<$year> is a leap year. Can be called as a class method
 if the year is provided.
 
+    say Dateish.is-leap-year(2016);           # True
+    say Date.new("1900-01-01").is-leap-year;  # False
+
 =head2 method day-of-month
 
 Defined as:
@@ -130,6 +133,9 @@ Returns the number of days in a month, where year and month default to that
 of the invocant. If both year and month are provided, it can be called as
 a class method.
 
+    say Date.new("2016-01-02").days-in-month;  # 31
+    say Dateish.days-in-month(2016, 1);        # 31
+
 =head2 method week
 
 Defined as:
@@ -147,6 +153,25 @@ at the start or end of a year, the week may actually belong to the other year.
     say $year;      # 2015
     say $week;      # 1
     say Date.new('2015-01-31').week;        # 2015 5
+
+=head2 method week-number
+
+Defined as:
+
+    method week-number(Date:D:) returns Int:D
+
+Usage:
+
+    Dateish.week-number
+
+Returns the week number (1..53) of the date specified by the invocant. The first
+week of the year is defined by ISO as the one which contains the fourth day of 
+January. Thus, dates early in January often end up in the last week of the prior 
+year, and similarly, the final few days of December may be placed in the first 
+week of the next year.
+
+    say Date.new("2014-12-31").week-number;   # 1  (first week of 2015)
+    say Date.new("2016-01-02").week-number;   # 53 (last week of 2015)
 
 =head2 method weekday-of-month
 
