Changed reference from method send (removed in 2015) to method print

--- a/Type/IO/Socket.pod
+++ b/Type/IO/Socket.pod
@@ -43,7 +43,7 @@ Fails if the socket is not connected.
     method write(IO::Socket:D: Blob:D $buf)
 
 Writes the supplied buffer to the socket, thus sending it to other end of the
-connection. The string version is L<#method send>.
+connection. The string version is L<#method print>.
 
 Fails if the socket is not connected.
 
