Added documentation for method sum

--- a/Type/List.pod
+++ b/Type/List.pod
@@ -961,6 +961,25 @@ elements but simply skip any undefined value:
 
 will display the following values: C<1, 1, 1, 2, 2, 3>
 
+=head2 routine sum
+
+Defined as:
+
+    multi sub    sum($list)  returns Numeric:D
+    multi method sum(List:D:) returns Numeric:D
+
+Usage:
+
+    sum LIST
+    LIST.sum
+
+Returns the sum of all elements in the list or 0 if the list is empty. 
+Throws an exception if an element can not be coerced into Numeric. 
+
+    say (1, 3, pi).sum;       # 7.14159265358979
+    say (1, "0xff").sum;      # 256 
+    say sum(0b1111, 5);       # 20 
+
 =end pod
 
 # vim: expandtab shiftwidth=4 ft=perl6
