--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -72,11 +72,11 @@ have a special meaning in Perl 6.
   ⁷      |  U+2077   | **7        |       | can be combined with ⁰..⁹
   ⁸      |  U+2078   | **8        |       | can be combined with ⁰..⁹
   ⁹      |  U+2079   | **9        |       | can be combined with ⁰..⁹
-  ∅      |  U+205    | set()      |       | I<(empty set)>
+  ∅      |  U+205    | set()      |       | (empty set)
   ∈      |  U+208    | (elem)     |       |
-  ∉      |  U+209    | S<!(elem)> |       |
+  ∉      |  U+209    | !(elem)    |       |
   ∋      |  U+20B    | (cont)     |       |
-  ∌      |  U+20C    | S<!(cont)> |       |
+  ∌      |  U+20C    | !(cont)    |       |
   ⊆      |  U+286    | (<=)       |       |
   ⊈      |  U+288    | !(<=)      |       |
   ⊂      |  U+282    | (<)        |       |
