define the code point properties in the description

--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -11,20 +11,23 @@ if it is different from C<6.c>.
 
 =head1 Alphabetic Characters
 
-Any codepoint that has the C<Ll>, C<Lu>, or C<Lt> property
-can be used just like any other alphabetic character from the ASCII range,
-like "A" or "a".  Any codepoint with the C<Lo> property can be used as
-an alphabetic where case distinctions do not matter.
+Any codepoint that has the C<Ll> (Letter, lowercase), C<Lu> (Letter,
+uppercase), or C<Lt> (Letter, titlecase) property can be used just
+like any other alphabetic character from the ASCII range, like "A" or
+"a".  Any codepoint with the C<Lo> (Letter, other) property can be
+used as an alphabetic where case distinctions do not matter.
 
 =head1 Numeric characters
 
-Any codepoint that has the C<Nd> property, can be used as a digit in any
-number, unless special cased in the list below.
+Any codepoint that has the C<Nd> (Number, decimal digit) property, can
+be used as a digit in any number, unless special cased in the list
+below.
 
 =head1 Whitespace characters
 
-Besides spaces and tabs you can use any other unicode whitespace character
-that has the C<Zs>, C<Zl> or C<Zp> property.
+Besides spaces and tabs you can use any other unicode whitespace
+character that has the C<Zs> (Separator, space), C<Zl> ((Separator,
+line), or C<Zp> (Separator, paragraph) property.
 
 =head1 Numeric values
 
