--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -12,7 +12,7 @@ if it is different from C<6.c>.
 =head1 Alphabetic Characters
 
 Any codepoint that has the C<Ll> (Letter, lowercase), C<Lu> (Letter,
-uppercase), or C<Lt> (Letter, titlecase) property can be used just
+uppercase), C<Lt> (Letter, titlecase), or C<Lm> (Letter, modifier) property can be used just
 like any other alphabetic character from the ASCII range, like "A" or
 "a".  Any codepoint with the C<Lo> (Letter, other) property can be
 used as an alphabetic where case distinctions do not matter.
@@ -20,18 +20,18 @@ used as an alphabetic where case distinctions do not matter.
 =head1 Numeric characters
 
 Any codepoint that has the C<Nd> (Number, decimal digit) property, can
-be used as a digit in any number, unless special cased in the list
+be used as a digit in any number, unless special-cased in the list
 below.
 
 =head1 Whitespace characters
 
 Besides spaces and tabs you can use any other unicode whitespace
-character that has the C<Zs> (Separator, space), C<Zl> ((Separator,
+character that has the C<Zs> (Separator, space), C<Zl> (Separator,
 line), or C<Zp> (Separator, paragraph) property.
 
 =head1 Numeric values
 
-Any codepoint that has the C<No> property can be used standalone as a numeric value,
+Any codepoint that has the C<No> (Number, other) property can be used standalone as a numeric value,
 such as ½ and ⅓.  (These aren't decimal digit characters, so can't be combined.)
 
 =head1 Other acceptable single codepoints
