add some examples; format some text for ease of maintenance

--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -4,24 +4,33 @@
 
 =SUBTITLE Unicode symbols and their Texas (ASCII) counterparts
 
-The following unicode symbols can be used in Perl 6 without needing to load
-any additional modules.  Please note that the Since column applies to the
-version of Perl the symbol was known to be available.  It is only mentioned
-if it is different from C<6.c>.
+The following unicode symbols can be used in Perl 6 without needing to
+load any additional modules.  Please note that the Since column
+applies to the version of Perl the symbol was known to be available.
+It is only mentioned if it is different from C<6.c>.
 
 =head1 Alphabetic Characters
 
 Any codepoint that has the C<Ll> (Letter, lowercase), C<Lu> (Letter,
-uppercase), C<Lt> (Letter, titlecase), or C<Lm> (Letter, modifier) property can be used just
-like any other alphabetic character from the ASCII range, like "A" or
-"a".  Any codepoint with the C<Lo> (Letter, other) property can be
-used as an alphabetic where case distinctions do not matter.
+uppercase), C<Lt> (Letter, titlecase), or C<Lm> (Letter, modifier)
+property can be used just like any other alphabetic character from the
+ASCII range, like "A" or "a".  Any codepoint with the C<Lo> (Letter,
+other) property can be used as an alphabetic character where case
+distinctions do not matter.
 
 =head1 Numeric characters
 
 Any codepoint that has the C<Nd> (Number, decimal digit) property, can
-be used as a digit in any number, unless special-cased in the list
-below.
+be used as a digit in any number.  For example:
+
+=begin code
+
+  my $var = 𝑒;
+  say $var; # 2.71828182845905
+
+=end code
+
+
 
 =head1 Whitespace characters
 
@@ -31,13 +40,22 @@ line), or C<Zp> (Separator, paragraph) property.
 
 =head1 Numeric values
 
-Any codepoint that has the C<No> (Number, other) property can be used standalone as a numeric value,
-such as ½ and ⅓.  (These aren't decimal digit characters, so can't be combined.)
+Any codepoint that has the C<No> (Number, other) property can be used
+standalone as a numeric value, such as ½ and ⅓.  (These aren't
+decimal digit characters, so can't be combined.)  For example:
+
+=begin code
+
+  my $var = ⅒ + 2;
+  say $var; # 2.1
+
+=end code
+
 
 =head1 Other acceptable single codepoints
 
-This list contains the single codepoints [and their Texas (ASCII) equivalents] that
-have a special meaning in Perl 6.
+This list contains the single codepoints [and their Texas (ASCII)
+equivalents] that have a special meaning in Perl 6.
 
 =table
   Symbol | Codepoint | Texas      | Since | Remarks
