use Nd chars per AlexDaniel

--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -25,8 +25,8 @@ be used as a digit in any number.  For example:
 
 =begin code
 
-  my $var = 𝑒;
-  say $var; # 2.71828182845905
+  my $var = １９; # U+FF11 U+FF19
+  say $var + 2;  # 21
 
 =end code
 
