add reference to properties

--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -9,6 +9,9 @@ load any additional modules.  Please note that the Since column
 applies to the version of Perl the symbol was known to be available.
 It is only mentioned if it is different from C<6.c>.
 
+Reference is made below to various properties of unicode codepoints.  The definitive list can be found here: L<http://www.unicode.org/Public/UCD/latest/ucd/PropList.txt>.
+
+
 =head1 Alphabetic Characters
 
 Any codepoint that has the C<Ll> (Letter, lowercase), C<Lu> (Letter,
