Fixed errors in the usage sections for methods file and line. Also added code example for line.

--- a/Type/Code.pod
+++ b/Type/Code.pod
@@ -103,7 +103,7 @@ Defined as:
 
 Usage:
 
-    CODE.Str
+    CODE.file
 
 Returns the name of the file in which the code object was declared.
 
@@ -117,8 +117,10 @@ Defined as
 
 Usage:
 
-    CODE.Int
+    CODE.line
 
 Returns the line number in which the code object was declared.
+
+    say &infix:<+>.line;
 
 =end pod
