make changes per AlexDaniel and Zoffix

--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -9,17 +9,16 @@ load any additional modules.  Please note that the Since column
 applies to the version of Perl the symbol was known to be available.
 It is only mentioned if it is different from C<6.c>.
 
-Reference is made below to various properties of unicode codepoints.  The definitive list can be found here: L<http://www.unicode.org/Public/UCD/latest/ucd/PropList.txt>.
-
+Reference is made below to various properties of unicode codepoints.
+The definitive list can be found here:
+L<http://www.unicode.org/Public/UCD/latest/ucd/PropList.txt>.
 
 =head1 Alphabetic Characters
 
 Any codepoint that has the C<Ll> (Letter, lowercase), C<Lu> (Letter,
-uppercase), C<Lt> (Letter, titlecase), or C<Lm> (Letter, modifier)
-property can be used just like any other alphabetic character from the
-ASCII range, like "A" or "a".  Any codepoint with the C<Lo> (Letter,
-other) property can be used as an alphabetic character where case
-distinctions do not matter.
+uppercase), C<Lt> (Letter, titlecase), C<Lm> (Letter, modifier), or
+the C<Lo> (Letter, other) property can be used just like any other
+alphabetic character from the ASCII range.
 
 =head1 Numeric characters
 
@@ -32,14 +31,6 @@ be used as a digit in any number.  For example:
   say $var + 2;  # 21
 
 =end code
-
-
-
-=head1 Whitespace characters
-
-Besides spaces and tabs you can use any other unicode whitespace
-character that has the C<Zs> (Separator, space), C<Zl> (Separator,
-line), or C<Zp> (Separator, paragraph) property.
 
 =head1 Numeric values
 
@@ -54,6 +45,11 @@ decimal digit characters, so can't be combined.)  For example:
 
 =end code
 
+=head1 Whitespace characters
+
+Besides spaces and tabs you can use any other unicode whitespace
+character that has the C<Zs> (Separator, space), C<Zl> (Separator,
+line), or C<Zp> (Separator, paragraph) property.
 
 =head1 Other acceptable single codepoints
 
