--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -400,21 +400,44 @@ B<NOTE:> If one or more values reference the topic variable, C<$_>, the
 right-hand side of the assignment will be interpreted as a L<Block|/type/Block.html>,
 not a Hash:
 
-    my %fruits = apple => 'McIntosh', pear => 'Bartlett';
-    given (%fruits) {
-      my $fails = { red => $_<apple>, green => $_<pear> };
-      say $fails.WHAT;          # Block
-      say $fails<red>;          # ERROR: Type Block does not support associative indexing
-    }
+    my @people = [
+        { id => "1A", firstName => "Andy", lastName => "Adams" },
+        { id => "2B", firstName => "Beth", lastName => "Burke" },
+        # ...
+    ];
 
-Generally, C«my %h = a => 1, b => 2;» is more idiomatic Perl 6:
+    sub lookup-user (Hash $h) { #`(Do something...) $h }
 
-    my %fruits = apple => 'McIntosh', pear => 'Bartlett';
-    given (%fruits) {
-      my %yummy = red => $_<apple>, green => $_<pear>;
-      say %yummy.WHAT;          # Hash
-      say %yummy<red>;          # McIntosh
-    }
+    my @names = map {
+        my $query = { name => "$_<firstName> $_<lastName>" };
+        say $query.WHAT;       # Block
+        say $query<name>;      # ERROR: Type Block does not support associative indexing
+
+        lookup-user($query);   # Type check failed in binding $h; expected Hash but got Block
+    }, @people;
+
+Instead, you should either:
+
+=begin item
+1) use the C<%()> hash constructor:
+
+    my $query = %( name => "$_<firstName> $_<lastName>" );
+=end item
+
+=begin item
+2) assign to a Hash type (C<%>) directly:
+
+    my %query = name => "$_<firstName> $_<lastName>";   # No braces required
+=end item
+
+=begin item
+or 3) simply avoid the issue altogether by explicitly providing a name for
+the topic variable:
+
+    my @names = @people.map: -> $person {
+        lookup-user( %( name => "$person<firstName> $person<lastName>" ) );
+    };
+=end item
 
 See L<Hash assignment|/type/Hash.html#Hash_assignment> for more details.
 
