Added documentation for method week-year

--- a/Type/Dateish.pod
+++ b/Type/Dateish.pod
@@ -173,6 +173,25 @@ week of the next year.
     say Date.new("2014-12-31").week-number;   # 1  (first week of 2015)
     say Date.new("2016-01-02").week-number;   # 53 (last week of 2015)
 
+=head2 method week-year
+
+Defined as:
+
+    method week-year(Date:D:) returns Int:D
+
+Usage:
+
+    Dateish.week-year
+
+Returns the week year of the date specified by the invocant. Normally C<week-year>
+is equal to C<Date.year>. Note however that dates early in January often end up in 
+the last week of the prior year, and similarly, the final few days of December 
+may be placed in the first week of the next year.
+
+    say Date.new("2015-11-15").week-year;   # 2015 
+    say Date.new("2014-12-31").week-year;   # 2015 (date belongs to the first week of 2015)
+    say Date.new("2016-01-02").week-year;   # 2015 (date belongs to the last week of 2015)
+
 =head2 method weekday-of-month
 
 Defined as:
