fix Pod typo, and minor reword

--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -343,9 +343,9 @@ According to S29, C<dump> has been... dumped.
 
 =item each HASH
 
-There is no exact equivalent. The closest is probably <%hash.kv> which returns
-a list of keys and values. Ergo: C<for %hash.kv -> $k, $v { #do stuff with $k
-and $v }>
+There is no exact equivalent, but you can use C<%hash.kv> which
+returns a list of keys and values. For example:
+C<< for %hash.kv -> $k, $v { say "$k: $v" } >>
 
 Incidentally, what we have there with the C<< -> >> is called a pointy
 block and, though there are a number of examples in the documentation,
