--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -597,6 +597,7 @@ The following adverbs are supported
     :nth(Int)               only substitute the nth's match
     :ss         :samespace  preserves whitespace on substitution
     :ii         :samecase   preserves case on substitution
+    :mm         :samemark   preserves character marks (e.g. 'ü' replaces with 'o' will result in 'ö')
     :x(Int)                 substitute exactly $x matches
 
 =end table
