--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -115,6 +115,42 @@ combined operator in the background, allowing the mechanism to be applied
 to user defined operators. There are quite a few Meta operators with
 different semantics, as explained in detail as follows.
 
+=head1 Substitution Operators
+
+    my $str = 'match string';
+    $str ~~ s/match/replacement/;
+    say $str; # replacement string
+    
+    say S/match/replacement/ given 'match string'; # replacement string
+
+The lower-case version (X<s///>) substitutes in-place, while the
+upper-case version (X<S///>) leaves the original alone and returns
+the resultant string.
+
+Both operators work on `$_` variable. Since smartmatch operator aliases
+the left hand side to `$_`, you can use lowercase `s///` with it, but
+it's a mistake to use it with uppercase `S///`, because you can't
+retrieve the modified string. The correct way is to alias the given
+string by some other method, such as a `for` loop or, as is shown in the
+example above, with a `given` block (in this case, it's a postfix form
+of it, without curlies).
+
+Both operators can take the same adverbs as the
+L<.subst method|/routine/subst>, which go between the `s`/`S` and the opening
+`/`. Whitespace can be used liberally:
+
+    $str ~~ s:g/match/replacement/;
+    say S:i :g /match/replacement/;
+
+You can also use a different delimeter:
+
+    $str ~~ s!foo!!;
+    say S{foo} = {} given 'foobar';
+
+Non-matching characters can simply replace the original slashes. Matching
+characters, like braces, require an extra step where you use an
+assignment operator to assign the replacement to the match part.
+    
 =head2 Assignment Operators
 
 Infix operators can be combined with the assignment operator to modify a
