doc anonymous enums

--- a/Language/typesystem.pod
+++ b/Language/typesystem.pod
@@ -64,6 +64,16 @@ A different starting value can be provided.
     enum Numbers «:one(1) two three four»;
     dd Numbers.enums; # OUTPUT«{:four(4), :one(1), :three(3), :two(2)}␤»
 
+
+Enums can be anonymous. They will be no type created, resulting in a lack of
+introspectiveness. The returned object is of type C<Map>.
+
+    my $e = enum <one two three>;
+    say two; # OUTPUT«two()(Hash)␤»
+    say one.WHAT; # OUTPUT«()␤»
+    say $e.WHAT; # OUTPUT«(Hash)␤»
+
+
 =head3 Methods
 
 =head4 method enums
