fix enum return type in example

--- a/Language/typesystem.pod
+++ b/Language/typesystem.pod
@@ -69,9 +69,9 @@ Enums can be anonymous. They will be no type created, resulting in a lack of
 introspectiveness. The returned object is of type C<Map>.
 
     my $e = enum <one two three>;
-    say two; # OUTPUT«two()(Hash)␤»
+    say two; # OUTPUT«two()(Map)␤»
     say one.WHAT; # OUTPUT«()␤»
-    say $e.WHAT; # OUTPUT«(Hash)␤»
+    say $e.WHAT; # OUTPUT«(Map)␤»
 
 
 =head3 Methods
