--- a/Type/Bag.pod
+++ b/Type/Bag.pod
@@ -88,7 +88,7 @@ say $a ⊖ $b;  # set(3)
 say $a ⊎ $b;  # bag(2(3), 4(2), 3(2))
 =end code
 
-See L<setbagmix#Set/Bag Operators> for a complete list of set and bag operators
+See L<Set/Bag Operators|/language/setbagmix#Set/Bag_Operators> for a complete list of set and bag operators
 with detailed explanations.
 
 =head1 Subroutines
